# StreamlineB2B

./: .env  .gitignore  ANALYTICS_AGENT_SETUP_GUIDE.md  ANALYTICS_INTEGRATION_COMPLETE.md  ASSISTANT_SETUP.md  Dockerfile.mcp  Procfile  README.md  check_embeddings.py  et --soft HEAD~2  pyproject.toml  requirements.txt  setup_assistant.py  test_auth_system.py  test_db_connection.py  test_direct_vector.py  test_facebook.py  test_openai.py  test_pooler.py  test_rag_diagnosis.py  test_simple.py
agents/analytics_agent/: README.md  __init__.py  chat.py  mcp_server.py  schemas.py  tools.py
agents/customer_service_agent/: chat.py  mcp_server.py  test_customer_service_tools.py  tools.py
agents/marketing_agent/: chat.py  mcp_server.py  schemas.py  test_marketing_tools.py  test_mcp_server.py  tools.py
database/migrations/: add_business_leads_fields.sql  create_analytics_demo_tables.sql  create_assistant_tables.sql  create_assistant_tables_fixed.sql  insert_analytics_demo_data.sql  insert_analytics_demo_order_items.sql  insert_analytics_demo_orders.sql
frontend/: agent_registry.py  app.py  business_agent_manager.py
frontend/templates/: admin_assistant_leads.html  admin_businesses.html  admin_dashboard.html  admin_users.html  assistant_widget.html  base.html  chat.html  index.html  login.html  privacy_policy.html  register.html  request_access.html  request_success.html  terms_of_service.html
test/: data.py  postgre_select.py  rag_test.py  table_creation.py  table_uploader.py
utils/: RAG.py  assistant_kb_loader.py  assistant_rag.py  pdf_chunker.py  supa.py
